Afficher la date de dernier mise a jours des articles dans l’onglet mise a jours

--- a/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
+++ b/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
@@ -36,6 +36,7 @@
       <thead class="thead-default thead-lg">
         <tr>
           <th>FOURNISSEUR</th>
+          <th>STATUT PRODUIT</th>
           <th>REF</th>
           <th>QTÉ DSP</th>
           <th>ÉTAT</th>
