Ajouter des champs pour modifier les coordonnées et NIF, STAT, RC, CIF

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -3,5 +3,8 @@
     <div class="col-lg-6">
       <app-user-manager></app-user-manager>
     </div>
+    <div class="col-lg-6">
+      <app-wpoptions ></app-wpoptions>
+    </div>
   </div>
 </div>
