--- a/src/app/components/responsible/responsible.component.html
+++ b/src/app/components/responsible/responsible.component.html
@@ -1,4 +1,4 @@
-  <form [formGroup]="Form" (ngSubmit)="onSave()">
+  <form [formGroup]="Form" (ngSubmit)="onSave()" class="px-4 py-4">
     <div class="row">
       <div class="col-md-6">
         <div class="form-group mb-4">
