--- a/src/app/components/accepted-item-suppliers/accepted-item-suppliers.component.html
+++ b/src/app/components/accepted-item-suppliers/accepted-item-suppliers.component.html
@@ -32,10 +32,10 @@
         <table class="table table-hover" id="item-table">
           <thead class="thead-default thead-lg">
             <tr>
-              <th class="pl-4">ID</th>
-              <th>Designation</th>
+              <th class="pl-4">Designation</th>
               <th>Qté demandée</th>
               <th>Prix</th>
+              <th>Date mise à jour</th>
             </tr>
           </thead>
         </table>
