--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -68,11 +68,11 @@
               <td class="pl-4">
                 <div><strong>{{item.name}}</strong></div>
               </td>
-              <td class="text-center">{{item.quantity === 0 ? '-' : item.quantity}} {{item.isQtyOverride() ? '*' : ''}}</td>
-              <td>{{item.priceFn() === 0 ? '-' : item.priceFn() | currency:'MGA':'symbole':'4.2-2':'fr'}}</td>
-              <td>{{item.discountTypeFn() === 0 ? '-' : item.discountFn() + '%'}}</td>
+              <td class="text-center">{{item.quantity === 0 ? '-' : item.quantity}} {{item.isQtyOverride ? '*' : ''}}</td>
+              <td>{{item.priceFn === 0 ? '-' : item.priceFn | currency:'MGA':'symbole':'4.2-2':'fr'}}</td>
+              <td>{{item.discountTypeFn === 0 ? '-' : item.discountFn + '%'}}</td>
               <td class="text-right pr-4">
-                {{item.subTotalNetFn() === 0 ? "Non disponible" : item.subTotalNetFn() | currency:'MGA':'symbole':'4.2-2':'fr'}}
+                {{item.subTotalNetFn === 0 ? "Non disponible" : item.subTotalNetFn | currency:'MGA':'symbole':'4.2-2':'fr'}}
               </td>
             </tr>
           </tbody>
