--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -22,7 +22,7 @@
                 <h5 class="font-strong text-success mb-3" *ngIf="ownerClient.company_name">
                   {{ownerClient.company_name}}
                 </h5>
-                <div class="text-light">{{ownerClient.address}}, {{billingAdress.postcode}} {{billingAdress.city}}.
+                <div class="text-light">{{ownerClient.address}}, {{billingAddress.postcode}} {{billingAddress.city}}.
                 </div>
 
                 <div class="row mb-2" *ngIf="ownerClient.stat">
@@ -73,8 +73,10 @@
                     <td class="pl-4">
                       <div><strong>{{item.name}}</strong></div>
                     </td>
-                    <td class="text-center">{{item.quantity === 0 ? '-' : item.quantity}}
-                      {{item.isQtyOverride ? '*' : ''}}</td>
+                    <td class="text-center">
+                      <span [innerHTML]="item.qtyUI"></span>
+
+                    </td>
                     <td>{{item.priceFn === 0 ? '-' : item.priceFn | currency:'MGA':'symbole':'4.2-2':'fr'}}</td>
                     <td>{{item.discountTypeFn === 0 ? '-' : item.discountFn + '%'}}</td>
                     <td class="text-right pr-4">
