--- a/src/app/pages/quotation/quotation-view/quotation-view.component.html
+++ b/src/app/pages/quotation/quotation-view/quotation-view.component.html
@@ -90,6 +90,13 @@
                     <th colspan="4" class="pl-4">Frais de transport</th>
                     <th>{{costTransport | currency:'MGA':'symbole':'4.2-2':'fr'}}</th>
                   </tr>
+                  <tr style="background-color: #fcff21;">
+                    <th colspan="4" class="pl-4">
+                      <small>*Cet article est en rupture de stock chez nous, nous vous tiendrons informé</small><br>
+                      <small>** Cet article est épuisé chez nous mais disponible sur commande</small>
+                    </th>
+                    <th></th>
+                  </tr>
                 </tfoot>
               </table>
             </div>
