--- a/src/app/pages/supplier/articles/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/articles/edit-article/edit-article.component.html
@@ -44,7 +44,7 @@
             <div class="col-md-6">
               <div class="form-group mb-4">
                 <label>Garantie fournisseur (unité en mois)</label>
-                <input class="form-control" formControlName="garentee" min="0" max="12" type="number" id="garentee"
+                <input class="form-control" formControlName="garentee" min="0" max="12" type="number" 
                   placeholder="e.g: 2 pour 2 mois">
               </div>
             </div>
@@ -72,14 +72,14 @@
               <div class="form-group mb-4">
                 <label>Prix de vente UF</label>
                 <input class="form-control" onkeypress="return false;" min="0" formControlName="pricePro" type="number"
-                  id="price_uf" placeholder="">
+                  placeholder="">
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group mb-4">
                 <label>Marge</label>
                 <input class="form-control" formControlName="marge" min="0" step="0.5" (ngModelChange)="onChangeMarge($event)"
-                  type="number" id="marge" placeholder="Ajouter une marge">
+                  type="number" placeholder="Ajouter une marge">
                 <div *ngIf="f.marge.errors && f.marge.dirty">
                   <label id="marge-error" class="help-block error">Ce champ est obligatoire.</label>
                 </div>
@@ -95,7 +95,7 @@
           <div class="form-group mb-4">
             <label>Prix R.</label>
             <input class="form-control" onkeypress="return false;" min="0"  step="0.5" formControlName="priceDealer" type="number"
-              id="price_dealer" placeholder="Ajouter un prix en AR">
+              placeholder="Ajouter un prix en AR">
             <div *ngIf="f.priceDealer.errors && f.priceDealer.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
             </div>
@@ -105,7 +105,7 @@
           <div class="form-group mb-4">
             <label>Marge R.</label>
             <input class="form-control" formControlName="margeDealer" min="0"  step="0.5" type="number"
-              (ngModelChange)="onChangeMargeDealer($event)" id="marge_dealer" placeholder="Ajouter une marge">
+              (ngModelChange)="onChangeMargeDealer($event)" placeholder="Ajouter une marge">
             <div *ngIf="f.margeDealer.errors && f.margeDealer.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
             </div>
@@ -119,7 +119,7 @@
           <div class="form-group mb-2">
             <label>Prix P.</label>
             <input class="form-control" onkeypress="return false;" min="0" formControlName="priceParticular"
-              type="number" id="price_particular" placeholder="">
+              type="number" placeholder="">
             <div *ngIf="f.priceParticular.errors && f.priceParticular.dirty">
               <label id="price-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
             </div>
@@ -129,7 +129,7 @@
           <div class="form-group mb-2">
             <label>Marge P.</label>
             <input class="form-control" formControlName="margeParticular" min="0" type="number"
-              (ngModelChange)="onChangeMargeParticular($event)" id="marge_particular" placeholder="Ajouter une marge">
+              (ngModelChange)="onChangeMargeParticular($event)"  placeholder="Ajouter une marge">
             <div *ngIf="f.margeParticular.errors && f.margeParticular.dirty">
               <label id="marge-dealer-error" class="help-block error">Ce champ est obligatoire.</label>
             </div>
@@ -141,7 +141,7 @@
         <div class="col-md-6">
           <div class="form-group mb-4">
             <label>Quantité disponible(s)</label>
-            <input class="form-control" formControlName="stock" min="0" type="number" id="stock" name="stock"
+            <input class="form-control" formControlName="stock" min="0" type="number" name="stock"
               placeholder="Ajouter la quantité disponible">
             <div *ngIf="f.stock.errors && f.stock.dirty">
               <label id="qty-error" class="help-block error">Ce champ est obligatoire.</label>
