--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
@@ -5,7 +5,6 @@
 
     <div>
       <ul class="media-list media-list-divider" *ngIf="queryResults.length > 0">
-
         <li class="media" *ngFor="let quotation of queryResults">
           <a class="media-img" [routerLink]="['/dashboard', 'quotation', quotation.id]"
             routerLinkActive="router-link-active">
@@ -26,8 +25,15 @@
             </div>
           </div>
         </li>
-
       </ul>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="inner-left preview" id="pagination">
+            <div class="paginationjs">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
