--- a/src/app/pages/supplier/articles/edit-article/edit-article.component.html
+++ b/src/app/pages/supplier/articles/edit-article/edit-article.component.html
@@ -62,9 +62,10 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group mb-4">
-            <label>Garantie fournisseur (unité en mois)</label>
+            <label>Garantie fournisseur</label>
             <input class="form-control" formControlName="garentee" min="0" max="12" type="number" id="garentee"
               placeholder="e.g: 2 pour 2 mois">
+              <small>Unité en mois</small>
           </div>
         </div>
         <div class="col-md-6">
