--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
@@ -15,9 +15,12 @@
           <div class="media-body d-flex">
             <div class="flex-1">
               <div class="media-heading">
+                <a [routerLink]="['/client', quotation.customer_id, 'edit']" routerLinkActive="router-link-active" >
                 {{quotation.customer_data.company_name !== "" ? quotation.customer_data.company_name : quotation.customer_data.last_name + " " + quotation.customer_data.company_name}}
+                </a>
+                <span [innerHTML]="quotation.position | statusOrder"></span>
               </div>
-              <p class="font-13 m-0 text-light">{{quotation.date_created}}</p>
+              <p class="font-13 m-0 text-light">{{quotation.date_created | date:'longDate'}}</p>
             </div>
             <div class="text-right ml-2">
               <h4 class="mb-1 font-strong">#{{quotation.id}}</h4>
