--- a/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
+++ b/src/app/pages/supplier/review-mail-supplier/review-mail-supplier.component.html
@@ -76,7 +76,6 @@
               </div>
             </div>
 
-
             <div class="form-group mb-4">
               <label class="font-light">Message</label>
               <editor apiKey="2grxn9iofnxolcaedqa399sh4ft6c1mg3e1kumgnyq6o0ap1" formControlName="message" name="projet"
@@ -140,14 +139,14 @@
                         <tr *ngFor="let article of updateForm.controls.articles.controls; let i = index" [formGroupName]="i">
                           <td width="250"><span class="font-10">{{article.value.title}}</span></td>
                           <td width="80"><span class="font-10">{{article.value.date_review}}</span></td>
-                          <td width="80">
-                            <span class="font-10">
-                              {{article.value.condition}}
-                            </span>
+                          <td width="100"> 
+                            <select formControlName="condition" class="form-control" (change)="handlerCondition($event, i)">
+                              <option [value]="cdt.key" *ngFor="let cdt of conditions">{{cdt.value}}</option>
+                            </select>
                           </td>
-                          <td width="60"><input min="0" class="form-control" formControlName="qty" type="number" /></td>
+                          <td width="40"><input min="0" class="form-control" formControlName="qty" type="number" /></td>
                           <td width="100">
-                            <input min="0" class="form-control" formControlName="price" type="number" />
+                            <input min="0" class="form-control"  formControlName="price" type="number" />
                             <input formControlName="article_id" type="hidden" [value]="article.id" />
                           </td>
                         </tr>
